Fixed the rest of the directory structure